refactor: make intent more explicit
Signed-off-by: Chris Laprun <claprun@redhat.com>